compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__modules__alias_constant.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/modules.rs
assertion_line: 96
expression: "\nimport rocket_ship as boop\npub fn go() { boop.x }\n"
snapshot_kind: text
---
----- SOURCE CODE
-- rocket_ship.gleam
pub const x = 1

-- main.gleam

import rocket_ship as boop
pub fn go() { boop.x }


----- COMPILED JAVASCRIPT
import * as $boop from "../rocket_ship.mjs";

export function go() {
  return $boop.x;
}
