compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__modules__alias_fn_call.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/modules.rs
assertion_line: 107
expression: "\nimport rocket_ship as boop\npub fn go() { boop.go() }\n"
snapshot_kind: text
---
----- SOURCE CODE
-- rocket_ship.gleam
pub fn go() { 1 }

-- main.gleam

import rocket_ship as boop
pub fn go() { boop.go() }


----- COMPILED JAVASCRIPT
import * as $boop from "../rocket_ship.mjs";

export function go() {
  return $boop.go();
}
