compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__modules__aliased_unqualified_fn_call.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/modules.rs
assertion_line: 22
expression: "import rocket_ship.{launch as boom_time}\npub fn go() { boom_time() }\n"
snapshot_kind: text
---
----- SOURCE CODE
-- rocket_ship.gleam
pub fn launch() { 1 }

-- main.gleam
import rocket_ship.{launch as boom_time}
pub fn go() { boom_time() }


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../rocket_ship.mjs";
import { launch as boom_time } from "../rocket_ship.mjs";

export function go() {
  return boom_time();
}
