compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__modules__constant.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/modules.rs
assertion_line: 48
expression: "\nimport rocket_ship\npub fn go() { rocket_ship.x }\n"
snapshot_kind: text
---
----- SOURCE CODE
-- rocket_ship.gleam
pub const x = 1

-- main.gleam

import rocket_ship
pub fn go() { rocket_ship.x }


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../rocket_ship.mjs";

export function go() {
  return $rocket_ship.x;
}
