compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__modules__different_package_import.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/modules.rs
assertion_line: 136
expression: "import one\npub fn go() { one.go() }\n"
snapshot_kind: text
---
----- SOURCE CODE
import one
pub fn go() { one.go() }


----- COMPILED JAVASCRIPT
import * as $one from "../../other_package/one.mjs";

export function go() {
  return $one.go();
}
