compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__modules__discarded_duplicate_import.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/modules.rs
assertion_line: 156
expression: "\nimport esa/rocket_ship\nimport nasa/rocket_ship as _nasa_rocket\npub fn go() { rocket_ship.go() }\n"
snapshot_kind: text
---
----- SOURCE CODE
-- esa/rocket_ship.gleam
pub fn go() { 1 }

-- nasa/rocket_ship.gleam
pub fn go() { 1 }

-- main.gleam

import esa/rocket_ship
import nasa/rocket_ship as _nasa_rocket
pub fn go() { rocket_ship.go() }


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../esa/rocket_ship.mjs";

export function go() {
  return $rocket_ship.go();
}
