compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__modules__discarded_duplicate_import_with_unqualified.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/modules.rs
assertion_line: 169
expression: "\nimport esa/rocket_ship\nimport nasa/rocket_ship.{go} as _nasa_rocket\npub fn esa_go() { rocket_ship.go() }\npub fn nasa_go() { go() }\n"
snapshot_kind: text
---
----- SOURCE CODE
-- esa/rocket_ship.gleam
pub fn go() { 1 }

-- nasa/rocket_ship.gleam
pub fn go() { 1 }

-- main.gleam

import esa/rocket_ship
import nasa/rocket_ship.{go} as _nasa_rocket
pub fn esa_go() { rocket_ship.go() }
pub fn nasa_go() { go() }


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../esa/rocket_ship.mjs";
import { go } from "../nasa/rocket_ship.mjs";

export function esa_go() {
  return $rocket_ship.go();
}

export function nasa_go() {
  return go();
}
