compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__modules__import_with_keyword.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/modules.rs
assertion_line: 183
expression: "\nimport rocket_ship.{class, in as while}\npub fn main() {\n  #(class, while)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import rocket_ship.{class, in as while}
pub fn main() {
  #(class, while)
}


----- COMPILED JAVASCRIPT
import * as $rocket_ship from "../rocket_ship.mjs";
import { class$, in$ as while$ } from "../rocket_ship.mjs";

export function main() {
  return [class$, while$];
}
